GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/Corp_Tracking_Type_and_Code__c.object-meta.xml
<CustomObject>
    <label>Corporate Tracking</label>
    <nameField>
        <label>Corporate Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>