GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Active_Account_CTCs__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_CTCs__c</fullName>
    <label>Active Account CTCs</label>
    <summaryFilterItems>
        <field>B2b_AccountCTC__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>B2b_AccountCTC__c.Corp_Tracking_Type_And_Code__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>