GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_Account__c.field-meta.xml
<CustomField>
    <fullName>B2b_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Corporate Trackings</relationshipLabel>
    <relationshipName>Corporate_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>