GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>B2b_ActivationDate__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>