GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_BookingCode__c.field-meta.xml
<CustomField>
    <fullName>B2b_BookingCode__c</fullName>
    <externalId>true</externalId>
    <label>Booking Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>