GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_IsDeutscherBund__c.field-meta.xml
<CustomField>
    <fullName>B2b_IsDeutscherBund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deutscher Bund</label>
    <type>Checkbox</type>
</CustomField>