GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_IsUsed__c.field-meta.xml
<CustomField>
    <fullName>B2b_IsUsed__c</fullName>
    <formula>B2b_Account__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>