GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/B2b_NameForReport__c.field-meta.xml
<CustomField>
    <fullName>B2b_NameForReport__c</fullName>
    <formula>CASE(
        Corp_Type__c,
        &#39;N° booking SNCB&#39;,
        &#39;FCE THI SNCB&#39;,
        &#39;N° booking GDS&#39;,
        &#39;FCE THI DE&#39;,
        &#39;N° booking NS&#39;,
        &#39;FCE THI NS&#39;,
        B2b_Account__r.Name
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for report</label>
    <type>Text</type>
</CustomField>