GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Corp_Code__c.field-meta.xml
<CustomField>
    <fullName>Corp_Code__c</fullName>
    <externalId>true</externalId>
    <label>Corp Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>