GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Corp_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Corp_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corp Tracking</label>
    <referenceTo>Corp_Tracking__c</referenceTo>
    <relationshipName>Corp_Tracking_Type_and_Code</relationshipName>
    <type>Lookup</type>
</CustomField>