GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Corp_Type__c.field-meta.xml
<CustomField>
    <fullName>Corp_Type__c</fullName>
    <label>Corp Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNCF_FCECode</fullName>
                <label>S3</label>
            </value>
            <value>
                <fullName>GDS CT</fullName>
                <label>GDS Air</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>