GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Create_NR_for_GDS_Air__c.field-meta.xml
<CustomField>
    <fullName>Create_NR_for_GDS_Air__c</fullName>
    <formula>IF(
    ISPICKVAL(Corp_Type__c, &quot;GDS CT&quot;) &amp;&amp;
    Active_Account_CTCs__c &gt; 0 &amp;&amp;
    Active_Account_PCCs__c &gt; 0,
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For GDS Air Corporate Tracking Codes, there must be both Active Account CTC’s and Account PCC Codes.</inlineHelpText>
    <label>Create NR for GDS Air?</label>
    <type>Checkbox</type>
</CustomField>