GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>