GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/Blue_Corp_Tracking_Code.recordType-meta.xml
<RecordType>
    <fullName>Blue_Corp_Tracking_Code</fullName>
    <active>true</active>
    <label>Blue Corp Tracking Code</label>
</RecordType>