GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/Corporate_code_Galileo.recordType-meta.xml
<RecordType>
    <fullName>Corporate_code_Galileo</fullName>
    <active>true</active>
    <label>Corporate code Galileo</label>
</RecordType>