GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/Corporate_code_Sabre.recordType-meta.xml
<RecordType>
    <fullName>Corporate_code_Sabre</fullName>
    <active>true</active>
    <label>Corporate code Sabre</label>
</RecordType>