GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/Eurostar_for_Business_code.recordType-meta.xml
<RecordType>
    <fullName>Eurostar_for_Business_code</fullName>
    <active>true</active>
    <label>Eurostar for Business code</label>
</RecordType>