GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/FCE.recordType-meta.xml
<RecordType>
    <fullName>FCE</fullName>
    <active>true</active>
    <label>FCE</label>
</RecordType>