GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/FCE_New.recordType-meta.xml
<RecordType>
    <fullName>FCE_New</fullName>
    <active>true</active>
    <label>FCE (New)</label>
</RecordType>