GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_BE.recordType-meta.xml
<RecordType>
    <fullName>GND_BE</fullName>
    <active>true</active>
    <label>GND BE</label>
</RecordType>