GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_Belgium_Continent.recordType-meta.xml
<RecordType>
    <fullName>GND_Belgium_Continent</fullName>
    <active>true</active>
    <label>GND Belgium Continent</label>
</RecordType>