GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_Belgium_London.recordType-meta.xml
<RecordType>
    <fullName>GND_Belgium_London</fullName>
    <active>true</active>
    <label>GND Belgium London</label>
</RecordType>