GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_NL.recordType-meta.xml
<RecordType>
    <fullName>GND_NL</fullName>
    <active>true</active>
    <label>GND NL</label>
</RecordType>