GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_The_Netherlands_Continent.recordType-meta.xml
<RecordType>
    <fullName>GND_The_Netherlands_Continent</fullName>
    <active>true</active>
    <label>GND The Netherlands Continent</label>
</RecordType>