GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/GND_The_Netherlands_London.recordType-meta.xml
<RecordType>
    <fullName>GND_The_Netherlands_London</fullName>
    <active>true</active>
    <label>GND The Netherlands London</label>
</RecordType>