GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/recordTypes/Red_FCE_Code.recordType-meta.xml
<RecordType>
    <fullName>Red_FCE_Code</fullName>
    <active>true</active>
    <label>Red Corp Tracking Code</label>
</RecordType>