GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/validationRules/B2b_DoNotUpdateRequiredInformation.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_DoNotUpdateRequiredInformation</fullName>
    <active>true</active>
    <description>Users can not update the Type, Account,Booking Code</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName == &#39;Red_FCE_Code&#39;,
 NOT($User.B2b_Bypass_Validation_Rules__c),
 OR(
  AND(
   PRIORVALUE(B2b_Account__c) != NULL,
   PRIORVALUE(B2b_BookingCode__c) != NULL,
   OR(
    ISCHANGED(B2b_Account__c),
    ISCHANGED(B2b_BookingCode__c)
   )
  ),
  AND(
   PRIORVALUE(B2b_Account__c) != NULL,
   PRIORVALUE(B2b_BookingCode__c) == NULL,
   ISCHANGED(B2b_Account__c)
  ),
  AND(
   PRIORVALUE(B2b_Account__c) == NULL,
   PRIORVALUE(B2b_BookingCode__c) != NULL,
   ISCHANGED(B2b_BookingCode__c)
  ),
  OR(
   ISCHANGED(Name),
   ISCHANGED(Corp_Type__c)
  )
 )
)</errorConditionFormula>
    <errorMessage>You can&#39;t update the FCE Code, Booking Code,Account and the Type</errorMessage>
</ValidationRule>