GearsetPOC/force-app/main/default/objects/Corp_Tracking_Type_and_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>B2b_Account__c</columns>
    <columns>Active__c</columns>
    <columns>Corp_Code__c</columns>
    <columns>Corp_Type__c</columns>
    <columns>Entity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>